--- a/simple_streamlit/requirements.txt
+++ b/simple_streamlit/requirements.txt
@@ -12,7 +12,7 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.7.0
-boto3==1.28.84
+boto3
 botocore==1.31.84
 cachetools==5.3.2
 certifi==2023.7.22
